--- a/blogpost.html
+++ b/blogpost.html
@@ -19,6 +19,14 @@
                 increibles que se
                 pueden hacer con ramas
             </p>
+            <p>Los blogs son la mejor
+                manera de compartir
+                información y tus ideas.
+                Mucho más que ir a conferencias
+                o saliren Youtube. Excepto si eres
+                un rockstar. pero estadisticamente
+                no lo eres... por ahora.
+            </p>
         </div>
 
     </div>
