--- a/blogpost.html
+++ b/blogpost.html
@@ -11,7 +11,8 @@
     <div id="container">
         <div id="cabecera">
             HyperBlog
-            <span id="tagline">Tu blog de confianza</span>
+            <span id="tagline">Tu blog
+                maestro</span>
         </div>
         <div id="post">
             <h1>Este es el titulo atractivo e interesante
@@ -31,6 +32,7 @@
                 un rockstar. pero estadisticamente
                 no lo eres... por ahora.
             </p>
+            <p>SUSCRIBITE Y DALE LIKE</p>
         </div>
 
     </div>
