--- a/blogpost.html
+++ b/blogpost.html
@@ -10,6 +10,7 @@
 <body>
     <div id="container">
         <div id="cabecera">
+            <img id="logo" src="image/dragon.png" alt="dragon">
             HyperBlog
             <span id="tagline">Tu blog
                 maestro</span>
