--- a/blogpost.html
+++ b/blogpost.html
@@ -34,7 +34,7 @@
             </p>
             <p>SUSCRIBITE Y DALE LIKE</p>
         </div>
-
+        <p id="footer">Hecho con amor en Platzi ❤</p>
     </div>
 </body>
 </html>
