agregué una imagen al blog

--- a/blogpost.html
+++ b/blogpost.html
@@ -25,6 +25,7 @@
                 incre&iacute;bles que se
                 pueden hacer con ramas
             </p>
+            <p><img src="image/panas.jpg" alt="panitas"></p>
             <p>Los blogs son la mejor
                 manera de compartir
                 información y tus ideas.
