-Imagen agregada -README modificado

--- a/blogpost.html
+++ b/blogpost.html
@@ -25,7 +25,7 @@
                 incre&iacute;bles que se
                 pueden hacer con ramas
             </p>
-            <p><img src="image/panas.jpg" alt="panitas"></p>
+            <p><img src="https://i.imgur.com/V40JDMG.jpeg" width="100%" alt="panitas"></p>
             <p>Los blogs son la mejor
                 manera de compartir
                 información y tus ideas.
