--- a/blogpost.html
+++ b/blogpost.html
@@ -13,7 +13,7 @@
             <img id="logo" src="image/dragon.png" alt="dragon">
             HyperBlog
             <span id="tagline">Tu blog
-                maestro</span>
+                de confianza</span>
         </div>
         <div id="post">
             <h1>Este es el titulo atractivo e interesante
